# JACE

./: Makefile  README.md
doc/: design_document.md
include/arch/: arm.h
include/game/: Bitboard.h  Board.h  Color.h  Direction.h  HistoryInfo.h  MagicEntry.h  MagicNumbers.h  Move.h  MoveFlags.h  Piece.h  Square.h  Tables.h  rng.h
src/: CMakeLists.txt  main.cc
src/arch/: CMakeLists.txt  arm.cc
src/game/: Board.cc  CMakeLists.txt  Color.cc  HistoryInfo.cc  MagicEntry.cc  MagicNumbers.cc  Move.cc  Square.cc  Tables.cc
